--- a/languages/slidedeck2-lite.pot
+++ b/languages/slidedeck2-lite.pot
@@ -4,159 +4,164 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SlideDeck 2 Lite\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-06 07:29-0800\n"
-"PO-Revision-Date: 2012-07-06 08:21-0800\n"
-"Last-Translator: Jamie Hamel-Smith <jamie@digital-telepathy.com>\n"
+"POT-Creation-Date: 2012-09-18 10:28-0800\n"
+"PO-Revision-Date: 2012-09-18 10:28-0800\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: English\n"
-"X-Poedit-Country: UNITED STATES\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
+"X-Generator: Poedit 1.5.3\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../slidedeck2-lite.php:610
-#: ../slidedeck2-lite.php:1341
+#: ../slidedeck2-lite.php:697 ../slidedeck2-lite.php:1402
 msgid "Unauthorized form submission!"
 msgstr ""
 
-#: ../slidedeck2-lite.php:666
+#: ../slidedeck2-lite.php:754
 msgid "Options Successfully Updated"
 msgstr ""
 
-#: ../slidedeck2-lite.php:917
+#: ../slidedeck2-lite.php:1009
 msgid "You are not authorized to do that."
 msgstr ""
 
-#: ../slidedeck2-lite.php:1109
+#: ../slidedeck2-lite.php:1166
 msgid "You are not authorized to do that"
 msgstr ""
 
-#: ../slidedeck2-lite.php:1573
-#: ../slidedeck2-lite.php:1610
+#: ../slidedeck2-lite.php:1690 ../slidedeck2-lite.php:1727
 msgid "Unauthorized request!"
 msgstr ""
 
-#: ../slidedeck2-lite.php:1710
+#: ../slidedeck2-lite.php:1831
 msgid "No lens slug was specified"
 msgstr ""
 
-#: ../slidedeck2-lite.php:1716
+#: ../slidedeck2-lite.php:1837
 msgid "The lens slug must be unique"
 msgstr ""
 
-#: ../slidedeck2-lite.php:1741
+#: ../slidedeck2-lite.php:1872
 msgid "Lens Copied Successfully"
 msgstr ""
 
-#: ../slidedeck2-lite.php:1744
+#: ../slidedeck2-lite.php:1875
 msgid "<strong>ERROR:</strong> Could not copy skin because the "
 msgstr ""
 
-#: ../slidedeck2-lite.php:1823
+#: ../slidedeck2-lite.php:1954
 msgid "Could not access filesystem."
 msgstr ""
 
-#: ../slidedeck2-lite.php:1826
+#: ../slidedeck2-lite.php:1957
 msgid "Filesystem error."
 msgstr ""
 
-#: ../slidedeck2-lite.php:1831
+#: ../slidedeck2-lite.php:1962
 msgid "Unable to locate SlideDeck 2 lens directory."
 msgstr ""
 
-#: ../slidedeck2-lite.php:1838
+#: ../slidedeck2-lite.php:1969
 #, php-format
 msgid "Could not fully remove the lens %s."
 msgstr ""
 
-#: ../slidedeck2-lite.php:2192
+#: ../slidedeck2-lite.php:2364
 #, php-format
 msgid "Addons are available for %s!"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2194
+#: ../slidedeck2-lite.php:2366
 #, php-format
-msgid "There are addons available for your installation of %1$s. %2$sInstall Your Addons%3$s"
+msgid ""
+"There are addons available for your installation of %1$s. %2$sInstall Your "
+"Addons%3$s"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2210
+#: ../slidedeck2-lite.php:2382
 #, php-format
 msgid "%s is not activated yet."
 msgstr ""
 
-#: ../slidedeck2-lite.php:2212
+#: ../slidedeck2-lite.php:2384
 #, php-format
-msgid "You must %1$senter your license key%2$s to receive automatic updates and support."
+msgid ""
+"You must %1$senter your license key%2$s to receive automatic updates and "
+"support."
 msgstr ""
 
-#: ../slidedeck2-lite.php:2403
+#: ../slidedeck2-lite.php:2617
 msgid " SlideDeck"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2458
-#: ../slidedeck2-lite.php:2495
-#: ../slidedeck2-lite.php:2563
-#: ../slidedeck2-lite.php:2601
+#: ../slidedeck2-lite.php:2673 ../slidedeck2-lite.php:2711
+#: ../slidedeck2-lite.php:2779 ../slidedeck2-lite.php:2817
 msgid "You do not have privileges to access this page"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2572
+#: ../slidedeck2-lite.php:2788
 msgid "Sorry, you do not have permission to access this page"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2699
+#: ../slidedeck2-lite.php:2915
 msgid "Create New SlideDeck"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2828
+#: ../slidedeck2-lite.php:3068
 msgid "SlideDeck 2"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2893
+#: ../slidedeck2-lite.php:3133 ../views/manage.php:40
 msgid "SlideDeck successfully deleted!"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2962
+#: ../slidedeck2-lite.php:3202
 msgid "Cannot Update Protected File"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2962
-msgid "The file you tried to write to is a protected file and cannot be overwritten."
+#: ../slidedeck2-lite.php:3202
+msgid ""
+"The file you tried to write to is a protected file and cannot be overwritten."
 msgstr ""
 
-#: ../slidedeck2-lite.php:2962
+#: ../slidedeck2-lite.php:3202
 msgid "Return to Lens Manager"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2989
+#: ../slidedeck2-lite.php:3229
 msgid "Update Successful!"
 msgstr ""
 
-#: ../slidedeck2-lite.php:2991
-msgid "Could not write the lens.css file for this lens. Please check file write permissions."
+#: ../slidedeck2-lite.php:3231
+msgid ""
+"Could not write the lens.css file for this lens. Please check file write "
+"permissions."
 msgstr ""
 
-#: ../slidedeck2-lite.php:3014
+#: ../slidedeck2-lite.php:3315
 msgid "see the SlideDeck"
 msgstr ""
 
-#: ../slidedeck2-lite.php:3262
-msgid "You do not have sufficient permissions to install SlideDeck lenses on this site."
+#: ../slidedeck2-lite.php:3613
+msgid ""
+"You do not have sufficient permissions to install SlideDeck lenses on this "
+"site."
 msgstr ""
 
-#: ../slidedeck2-lite.php:3272
+#: ../slidedeck2-lite.php:3623
 msgid "Upload SlideDeck Lens"
 msgstr ""
 
-#: ../slidedeck2-lite.php:3279
+#: ../slidedeck2-lite.php:3630
 #, php-format
 msgid "Installing SlideDeck Lens from uploaded file: %s"
 msgstr ""
 
-#: ../slidedeck2-lite.php:3307
+#: ../slidedeck2-lite.php:3658
 msgid "Insert SlideDeck"
 msgstr ""
 
@@ -181,11 +186,14 @@ msgid "Lens installed successfully."
 msgstr ""
 
 #: ../classes/slidedeck-lens-upload.php:116
-msgid "The /wp-content/plugins/slidedeck-lenses folder does not exist, please make sure it exists and is writable by the server."
+msgid ""
+"The /wp-content/plugins/slidedeck-lenses folder does not exist, please make "
+"sure it exists and is writable by the server."
 msgstr ""
 
 #: ../classes/slidedeck-lens-upload.php:119
-msgid "The /wp-content/plugins/slidedeck-lenses folder could not be written to."
+msgid ""
+"The /wp-content/plugins/slidedeck-lenses folder could not be written to."
 msgstr ""
 
 #: ../classes/slidedeck-lens-upload.php:122
@@ -201,7 +209,8 @@ msgid "The lens is missing the <code>template.thtml</code> template file."
 msgstr ""
 
 #: ../classes/slidedeck-lens-upload.php:132
-msgid "The <code>lens.json</code> stylesheet doesn't contain a valid lens header."
+msgid ""
+"The <code>lens.json</code> stylesheet doesn't contain a valid lens header."
 msgstr ""
 
 #: ../classes/slidedeck-lens-upload.php:196
@@ -221,7 +230,32 @@ msgid "New Feature: Lens Management"
 msgstr ""
 
 #: ../lib/pointers.php:75
-msgid "Skins are now Lenses and they're more powerful than ever! We've made managing, editing, uploading and creating your own lenses easier than ever! Now you can edit lenses right from the WordPress control panel, make copies of stock lenses and upload new lenses for all your SlideDecks."
+msgid ""
+"Skins are now Lenses and they're more powerful than ever! We've made "
+"managing, editing, uploading and creating your own lenses easier than ever! "
+"Now you can edit lenses right from the WordPress control panel, make copies "
+"of stock lenses and upload new lenses for all your SlideDecks."
+msgstr ""
+
+#: ../lib/pointers.php:89
+#, php-format
+msgid "7 days, 50% discount on SlideDeck 2 Personal"
+msgstr ""
+
+#: ../lib/pointers.php:91
+msgid "Welcome, thanks for choosing SlideDeck Lite!"
+msgstr ""
+
+#: ../lib/pointers.php:92
+#, php-format
+msgid ""
+"You are free to use this plugin for life and as a token of our appreciation "
+"we would like to offer you a 50% discount for the Personal version of "
+"SlideDeck 2. "
+msgstr ""
+
+#: ../lib/pointers.php:93
+msgid "This offer expires in 7 days."
 msgstr ""
 
 #: ../lib/slidedeck-plugin-install.php:8
@@ -295,7 +329,9 @@ msgstr ""
 
 #: ../sources/flickr/views/show.php:46
 #, php-format
-msgid "This is your Flickr ID, not username. Check here for yours: %1$sidGettr.com%2$s."
+msgid ""
+"This is your Flickr ID, not username. Check here for yours: %1$sidGettr.com"
+"%2$s."
 msgstr ""
 
 #: ../sources/flickr/views/show.php:47
@@ -351,7 +387,9 @@ msgid "Loading your taxonomies..."
 msgstr ""
 
 #: ../sources/posts/views/show.php:61
-msgid "Toggle one or more taxonomies in the left column to see the selection boxes appear here."
+msgid ""
+"Toggle one or more taxonomies in the left column to see the selection boxes "
+"appear here."
 msgstr ""
 
 #: ../sources/posts/views/show.php:77
@@ -391,56 +429,49 @@ msgid "SlideDeck Advanced Options"
 msgstr ""
 
 #: ../views/admin-options.php:41
-msgid "These options are for situations where SlideDeck might not be working correctly. Only change them if you are having difficulty with your SlideDeck installation, <em>or if you are certain of what they do</em>."
+msgid ""
+"These options are for situations where SlideDeck might not be working "
+"correctly. Only change them if you are having difficulty with your SlideDeck "
+"installation, <em>or if you are certain of what they do</em>."
 msgstr ""
 
-#: ../views/first-save-dialog.php:35
-#: ../views/getcode-dialog.php:35
+#: ../views/first-save-dialog.php:35 ../views/getcode-dialog.php:35
 msgid "Three Simple Ways to Publish Your SlideDeck"
 msgstr ""
 
-#: ../views/first-save-dialog.php:42
-#: ../views/getcode-dialog.php:42
+#: ../views/first-save-dialog.php:42 ../views/getcode-dialog.php:42
 msgid "Insert into existing"
 msgstr ""
 
-#: ../views/first-save-dialog.php:44
-#: ../views/getcode-dialog.php:44
+#: ../views/first-save-dialog.php:44 ../views/getcode-dialog.php:44
 msgid "Insert SlideDeck into pages or posts"
 msgstr ""
 
-#: ../views/first-save-dialog.php:50
-#: ../views/getcode-dialog.php:50
+#: ../views/first-save-dialog.php:50 ../views/getcode-dialog.php:50
 msgid "Click to launch a new "
 msgstr ""
 
-#: ../views/first-save-dialog.php:54
-#: ../views/getcode-dialog.php:54
+#: ../views/first-save-dialog.php:54 ../views/getcode-dialog.php:54
 msgid "New Page"
 msgstr ""
 
-#: ../views/first-save-dialog.php:55
-#: ../views/getcode-dialog.php:55
+#: ../views/first-save-dialog.php:55 ../views/getcode-dialog.php:55
 msgid "or"
 msgstr ""
 
-#: ../views/first-save-dialog.php:57
-#: ../views/getcode-dialog.php:57
+#: ../views/first-save-dialog.php:57 ../views/getcode-dialog.php:57
 msgid "New Post"
 msgstr ""
 
-#: ../views/first-save-dialog.php:63
-#: ../views/getcode-dialog.php:63
+#: ../views/first-save-dialog.php:63 ../views/getcode-dialog.php:63
 msgid "Copy &amp; Paste this shortcode into your post"
 msgstr ""
 
-#: ../views/first-save-dialog.php:67
-#: ../views/getcode-dialog.php:67
+#: ../views/first-save-dialog.php:67 ../views/getcode-dialog.php:67
 msgid "Copy Shortcode to Clipboard"
 msgstr ""
 
-#: ../views/first-save-dialog.php:68
-#: ../views/getcode-dialog.php:68
+#: ../views/first-save-dialog.php:68 ../views/getcode-dialog.php:68
 msgid "Copied Successfully!"
 msgstr ""
 
@@ -448,8 +479,8 @@ msgstr ""
 msgid "Don't show this notification again"
 msgstr ""
 
-#: ../views/first-save-dialog.php:78
-#: ../views/getcode-dialog.php:74
+#: ../views/first-save-dialog.php:78 ../views/getcode-dialog.php:74
+#: ../views/elements/_sources.php:18
 msgid "Close"
 msgstr ""
 
@@ -457,11 +488,15 @@ msgstr ""
 msgid "Back to Manage Screen"
 msgstr ""
 
-#: ../views/form.php:71
+#: ../views/form.php:71 ../views/elements/_manage-table.php:74
 msgid "Preview"
 msgstr ""
 
-#: ../views/form.php:91
+#: ../views/form.php:84
+msgid "Slide Area Dimensions Will Be"
+msgstr ""
+
+#: ../views/form.php:93
 msgid "Options"
 msgstr ""
 
@@ -482,7 +517,10 @@ msgid "How do I get an API Key?"
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:49
-msgid "Anyone can get an Api Key. All you need is a Google account and you must be logged in to get the key. We wish it were easier, but you should only need to get an API Key once."
+msgid ""
+"Anyone can get an Api Key. All you need is a Google account and you must be "
+"logged in to get the key. We wish it were easier, but you should only need "
+"to get an API Key once."
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:52
@@ -497,13 +535,15 @@ msgstr ""
 msgid "Enable API Access"
 msgstr ""
 
-#: ../views/gplus-posts-how-to.php:62
-#: ../views/gplus-posts-how-to.php:65
+#: ../views/gplus-posts-how-to.php:62 ../views/gplus-posts-how-to.php:65
 msgid "Agree to the Terms"
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:63
-msgid "You'll need to click through some of the Terms of Service agreements (usually 2 of them). Once you've agreed to the terms, you should be redirected back to the overview page."
+msgid ""
+"You'll need to click through some of the Terms of Service agreements "
+"(usually 2 of them). Once you've agreed to the terms, you should be "
+"redirected back to the overview page."
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:71
@@ -511,7 +551,10 @@ msgid "Copy your API Key then paste it into SlideDeck 2"
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:72
-msgid "Click the API ACcess menu at the top left and copy your API Key! We'll automatically save your key so it will be pre-populated for your next SlideDeck 2."
+msgid ""
+"Click the API ACcess menu at the top left and copy your API Key! We'll "
+"automatically save your key so it will be pre-populated for your next "
+"SlideDeck 2."
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:74
@@ -535,22 +578,26 @@ msgid "Next Step"
 msgstr ""
 
 #: ../views/gplus-posts-how-to.php:87
-msgid "Google uses API Keys for most of its content. This way if someone is being abusive towards Google (and more importantly) your data, they can be cut off. They also use the API key to limit the number of requests to their API and better handle load."
+msgid ""
+"Google uses API Keys for most of its content. This way if someone is being "
+"abusive towards Google (and more importantly) your data, they can be cut "
+"off. They also use the API key to limit the number of requests to their API "
+"and better handle load."
 msgstr ""
 
 #: ../views/insert-iframe.php:39
 msgid "Insert your SlideDeck"
 msgstr ""
 
-#: ../views/insert-iframe.php:81
+#: ../views/insert-iframe.php:88
 msgid "Choose a SlideDeck to insert:"
 msgstr ""
 
-#: ../views/insert-iframe.php:105
+#: ../views/insert-iframe.php:112
 msgid "Cancel"
 msgstr ""
 
-#: ../views/insert-iframe.php:106
+#: ../views/insert-iframe.php:113
 msgid "Insert"
 msgstr ""
 
@@ -594,16 +641,20 @@ msgstr ""
 msgid "UX Design Studio"
 msgstr ""
 
-#: ../views/preview-iframe.php:233
+#: ../views/preview-iframe.php:257
 msgid "Loading"
 msgstr ""
 
-#: ../views/preview-iframe.php:235
+#: ../views/preview-iframe.php:259
 msgid "We&rsquo;re decking out your content!"
 msgstr ""
 
-#: ../views/elements/_lens.php:97
-#: ../views/elements/_manage-table.php:60
+#: ../views/elements/_create-dynamic-slidedeck-block.php:5
+msgid "Create SlideDeck"
+msgstr ""
+
+#: ../views/elements/_lens.php:97 ../views/elements/_manage-table.php:60
+#: ../views/elements/_sources.php:15
 msgid "Delete"
 msgstr ""
 
@@ -624,7 +675,9 @@ msgid "Zero SlideDecks Created"
 msgstr ""
 
 #: ../views/elements/_manage-table.php:93
-msgid "Let's fix that. Click the create button above and choose a content source to start."
+msgid ""
+"Let's fix that. Click the create button above and choose a content source to "
+"start."
 msgstr ""
 
 #: ../views/elements/_no-content-found.php:37
@@ -632,7 +685,11 @@ msgid "No Content Found"
 msgstr ""
 
 #: ../views/elements/_no-content-found.php:39
-msgid "We&rsquo;re having trouble finding your content. Please double-check<br /> your <a href=\"#source-configuration\" class=\"no-content-source-configuration\"><span class=\"gear-icon\"></span>source configuration</a> at the top of the page."
+msgid ""
+"We&rsquo;re having trouble finding your content. Please double-check<br /> "
+"your <a href=\"#source-configuration\" class=\"no-content-source-"
+"configuration\"><span class=\"gear-icon\"></span>source configuration</a> at "
+"the top of the page."
 msgstr ""
 
 #: ../views/elements/_options.php:40
@@ -648,18 +705,20 @@ msgid "Covers"
 msgstr ""
 
 #: ../views/elements/_options.php:78
-msgid "Covers let you add a title slide to your SlideDeck, and add a call-to-action to the last slide."
+msgid ""
+"Covers let you add a title slide to your SlideDeck, and add a call-to-action "
+"to the last slide."
 msgstr ""
 
-#: ../views/elements/_options.php:79
+#: ../views/elements/_options.php:80
 msgid "Front Cover :"
 msgstr ""
 
-#: ../views/elements/_options.php:86
+#: ../views/elements/_options.php:89
 msgid "Back Cover :"
 msgstr ""
 
-#: ../views/elements/_options.php:93
+#: ../views/elements/_options.php:98
 msgid "Edit"
 msgstr ""
 
@@ -677,7 +736,11 @@ msgid "Apply"
 msgstr ""
 
 #: ../views/elements/_widget-form.php:34
-msgid "Display a SlideDeck in a widget area. <em><strong>NOTE:</strong> since most widget areas are narrow sidebars, your SlideDeck may not appear correctly. We only recommend placing SlideDecks in wider widget areas like headers and footers.</em>"
+msgid ""
+"Display a SlideDeck in a widget area. <em><strong>NOTE:</strong> since most "
+"widget areas are narrow sidebars, your SlideDeck may not appear correctly. "
+"We only recommend placing SlideDecks in wider widget areas like headers and "
+"footers.</em>"
 msgstr ""
 
 #: ../views/elements/_widget-form.php:35
@@ -686,6 +749,14 @@ msgstr ""
 
 #: ../views/elements/_widget-form.php:45
 msgid "Deploy SlideDeck using an iframe"
+msgstr ""
+
+#: ../views/elements/_widget-form.php:51
+msgid "Use RESS? (responsive)"
+msgstr ""
+
+#: ../views/elements/_widget-form.php:57
+msgid "Proportional? (applies to RESS)"
 msgstr ""
 
 #: ../views/upsells/_upsell-modal-covers.php:3
@@ -704,6 +775,12 @@ msgstr ""
 msgid "More lenses? Yep, we've got those ready for you"
 msgstr ""
 
+#: ../views/upsells/_upsell-modal-lenses.php:9
+msgid ""
+"We have 7 additional highly-crafted SlideDeck lenses available to all our "
+"Personal tier customers and up."
+msgstr ""
+
 #: ../views/upsells/_upsell-modal-slidecount.php:3
 msgid "Need more slides in your decks?"
 msgstr ""
@@ -712,3 +789,15 @@ msgstr ""
 msgid "As many slides as you like with SlideDeck Personal"
 msgstr ""
 
+#: ../lenses/reporter/template.video.thtml:30
+msgid "View Video Page"
+msgstr ""
+
+#: ../lenses/tool-kit/template.textonly.thtml:31
+#: ../lenses/tool-kit/template.thtml:31
+msgid "Read More"
+msgstr ""
+
+#: ../lenses/tool-kit/template.video.thtml:29
+msgid "Go&nbsp;to&nbsp;video&nbsp;page"
+msgstr ""
